<?xml version="1.0"?>
<package format="2">
  <name>orchard_map_update</name>
  <version>0.1.0</version>
  <description>FAST-LIVO2 compatible map update data collection tools for orchard inspection maps.</description>

  <maintainer email="sigu@todo.todo">sigu</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>livox_ros_driver</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
</package>
